methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:1: error: Missing closing brace `}' assumed here
for (i<- 1 to 4){
^PictureMono2:1: error: expected class or object definition
for (i<- 1 to 4){
^